@@ -1,4 +1,5 @@
 
+	* fix listen socket issue when disabling "force_proxy" mode
 	* fix full allocation failure on APFS
 
 1.1.5 release
